--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <main>
       <section class="content">
         <section class="hero">
-          <img src="img/software-developer.jpg" alt="Rodrigo Vaccari software developer">
+          <img src="img/software-developer.jpg" alt="Software Developer by Nick Youngson CC BY-SA 3.0 Alpha Stock Images">
         </section>
 
         <section class="featured">
